--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <p>
         Biodata <br>
-        
+        <img src= "picture.jpg" alt="#"><br><br>
                        Full Name : Paul Mark Caturza<br>
                    Date of Birth : November 1, 2002 <br>
                           Gender : Male<br>
